<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Computer Quiz</string>
    <string name="app_name_lite">Computer Quiz (LITE)</string>
    
    <string name="label_intro_activity">Intro</string>
    <string name="label_info_activity">Info</string>
    <string name="label_reportbug_activity">Report a bug</string>
    <string name="label_sendmessage_activity">Suggest a question</string>
    <string name="label_quiz_activity">Quiz</string>
    <string name="label_results_activity">Results</string>
    <string name="label_settings_activity">Settings</string>
    
    <string name="menu_about">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="title_activity_main">Computer Quiz</string>
    <string name="introduction">Welcome to the Computer Quiz!\nSelect a difficulty level:</string>
    <string name="option_sudden_death">Sudden Death - 100 Questions</string>
    <string name="startQuiz">Start Quiz!</string>
    <string name="msg_quit">Are you sure you want to quit?</string>

    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_done">Done</string>

    <string name="title_info">Computer and IT Quiz was developed by Mike Heyworth and
         Janos Gyerik. Please see the links below for our other apps and websites/blogs.</string>
    <string name="blou_calorie_counter">Blou Simple Calorie Counter</string>
    <string name="wine_notes">Wine Notes (Lite)</string>
    <string name="recipe_notes">Recipe Notes (Lite)</string>
    <string name="mikes_blog">Visit Mike\'s Blog (AndroidMakeMoney.com)</string>
    <string name="lnk_blou_calorie_counter">https://play.google.com/store/apps/details?id=com.spiderdog.simplecalorietrackeradfree</string>
    <string name="lnk_wine_notes">https://play.google.com/store/apps/details?id=com.winenotes.lite</string>
    <string name="lnk_recipe_notes">https://play.google.com/store/apps/details?id=com.recipenotes.lite</string>
    <string name="lnk_mikes_blog">http://www.androidmakemoney.com</string>
    
    <string name="key_max_questions_normal">max_questions_normal</string>
    <string name="title_max_questions_normal">Questions in normal mode</string>
    <string name="dialog_title_max_questions_normal"># of questions</string>
    <string name="summary_max_questions_normal">Number of questions in normal mode</string>
    <string name="summary_max_questions_normal_format">Maximum # of questions = %s</string>
    
    <string name="key_max_questions_suddendeath">max_questions_suddendeath</string>
    <string name="title_max_questions_suddendeath">Questions in Sudden Death mode</string>
    <string name="dialog_title_max_questions_suddendeath"># of questions</string>
    <string name="summary_max_questions_suddendeath">Number of questions in sudden death mode</string>
    <string name="summary_max_questions_suddendeath_format">Maximum # of questions = %s</string>
    
    <string name="email_address">janos.gyerik@gmail.com</string>
    <string name="no_email_client">Choose an email client</string>
    <string name="email_client_chooser">Send e-mail...</string>
    
    <string name="btn_reportbug">Report this bug >></string>
    <string name="title_reportbug">Report a bug</string>
    <string name="menu_reportbug">Report a bug</string>
    <string name="subject_reportbug_prefix">[manyquiz-bug] </string>
    
    <string name="btn_sendmessage">Submit this question >></string>
    <string name="title_sendmessage">Suggest a question</string>
    <string name="menu_sendmessage">Suggest a question</string>
    <string name="subject_sendmessage_prefix">[manyquiz-msg] </string>
    
    <string name="description_reportbug">Please describe the bug. The more details you include the better!</string>
    <string name="hint_reportbug">Describe here the bug...</string>
    
    <string name="description_sendmessage">Please enter your question idea. We will review it and hopefully include in our next release!</string>
    <string name="hint_sendmessage">Describe here your question...</string>
    
    <string name="result_score_format" formatted="false">Score: %d / %d (%d%%)</string>

    <string name="result_0">Dude...you got them all wrong!</string>
	<string name="result_less_than_10">Not looking great...</string>
	<string name="result_less_than_40">Good try. Good, but not great.</string>
	<string name="result_less_than_70">Pretty good try... Keep practicing!</string>
	<string name="result_less_than_90">Very good - You\'ve been studying!</string>
	<string name="result_less_than_100">Wow - Almost perfect! You can make it all the way!</string>
	<string name="result_100">Perfect. 100%! Bravo, you are a MACHINE!</string>
    <string name="result_bug">Ouch. You found a bug. Please tell us about it!</string>

</resources>
