<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <RelativeLayout
        style="@style/mainHeaderWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            style="@style/mainHeader"
            android:layout_alignParentLeft="true"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/lite_watermark"
            style="@style/liteWatermark"
            android:layout_toRightOf="@id/title"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView style="@style/mainContent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/introduction"
                android:text="@string/title_info" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnBlouCalorieCounter"
                    style="@style/linkButton"
                    android:text="@string/blou_calorie_counter" />

                <Button
                    android:id="@+id/btnWineNotes"
                    style="@style/linkButton"
                    android:text="@string/wine_notes" />

                <Button
                    android:id="@+id/btnRecipeNotes"
                    style="@style/linkButton"
                    android:text="@string/recipe_notes" />

                <Button
                    android:id="@+id/btnMikesBlog"
                    style="@style/linkButton"
                    android:text="@string/mikes_blog" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>