<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <RelativeLayout
        style="@style/mainHeaderWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            style="@style/mainHeader"
            android:layout_alignParentLeft="true"
            android:text="@string/label_sendmessage_activity" />

        <TextView
            android:id="@+id/lite_watermark"
            style="@style/liteWatermark"
            android:layout_toRightOf="@id/title"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView style="@style/mainContent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/summary"
                android:text="@string/description_sendmessage" />

            <EditText
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sendmessage"
                android:lines="5"
                android:gravity="top"
                android:text="" />

            <Button
                android:id="@+id/btn_sendmessage"
                style="@style/linkButton"
                android:text="@string/btn_sendmessage" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>